--- a/webapp/templates/webapp/balance.html
+++ b/webapp/templates/webapp/balance.html
@@ -6,27 +6,43 @@
 
 {% block 'body' %}
   <div class="row">
-    <h4 class="fw-bold py-3 mb-1"><span class="text-muted fw-light">Черный список /</span> Ключевые слова</h4>
+    <h4 class="fw-bold py-3 mb-1"><span class="text-muted fw-light">Главное меню /</span> Баланс</h4>
     <div class="col-xl-6 my-form-border">
       <div class="card mb-1 my-form-area">
-        <h5 class="card-header mb-0 pb-0">Укажите ключевые слова для черного списка:</h5>
+<!--        <h5 class="card-header mb-0 pb-0">Посмо</h5>-->
         <div class="card-body">
           <div class="row gy-3">
             <div class="col-md">
               <div class="demo-inline-spacing mt-1">
 
 <!--                  Блок с балансом-->
-                  <div class="card">
-                    <div class="card-body">
-                      <div class="card-title d-flex align-items-start justify-content-between">
-                        <div class="avatar flex-shrink-0">
-                          <img src="/static/mytlg/site_donor/assets/img/icons/unicons/wallet-info.png" alt="Credit Card" class="rounded">
+                <div class="card my-form-area">
+                    <div class="d-flex p-4 pt-3 my-form-border">
+                        <div class="avatar flex-shrink-0 me-3">
+                            <img src="/static/mytlg/site_donor/assets/img/icons/unicons/wallet.png" alt="User">
                         </div>
-                      </div>
-                      <h3 class="card-title text-nowrap mb-1">💲 {{ balance }}</h3>
+                        <div>
+                            <small class="text-muted d-block">Ваш баланс</small>
+                            <div class="d-flex align-items-center">
+                                <h6 class="mb-0 me-1">₽ {{ balance }}</h6>
+                                {% if transaction %}
+                                    {% if transaction.0.operation_type == 'depositing' %}
+                                        <small class="text-success fw-semibold">
+                                            <i class="bx bx-chevron-up"></i>
+                                            {{ transaction.0.amount }}
+                                        </small>
+                                    {% else %}
+                                        <small class="text-danger fw-semibold">
+                                            <i class="bx bx-down-arrow-alt"></i>
+                                            {{ transaction.0.amount }}
+                                        </small>
+                                    {% endif %}
+                                {% endif %}
+                            </div>
+                        </div>
                     </div>
-                  </div>
-
+                </div>
+                <hr>
                 <form id="interestsForm" action="{% url 'webapp:balance' %}" method="post">
                   {% csrf_token %}
                   {% if messages %}
@@ -45,7 +61,7 @@
                                   <small class="text-light fw-semibold">Выберите способ оплаты</small>
                                   {% for i_method in pay_methods %}
                                     <div class="form-check">
-                                        <input name="default-radio-1" class="form-check-input" type="radio" value="{{ i_method.0 }}" id="defaultRadio1" checked>
+                                        <input name="pay_method" class="form-check-input" type="radio" value="{{ i_method.0 }}" id="defaultRadio1" checked>
                                         <label class="form-check-label" for="defaultRadio1"> {{ i_method.1 }} </label>
                                     </div>
                                   {% endfor %}
@@ -53,11 +69,25 @@
                             </div>
                         </div>
                     </div>
-                    <hr>
 
-                  <div class="mb-1 mt-3">
-                    <button id="writeInterestsBtn" type="submit" class="btn btn-info my-btn-clr">Отправить</button>
-                  </div>
+                    <div class="row mb-3">
+                        <div class="col-sm-10">
+                            <div class="input-group input-group-merge">
+                                <div class="col-md">
+                                    <small class="text-light fw-semibold">Введите сумму пополнения</small>
+                                    <div class="input-group input-group-merge">
+                                        <span class="input-group-text my-filling-fields">₽</span>
+                                            <input type="text" name="amount" class="form-control my-filling-fields" placeholder="500" aria-label="Сумма (кратная рублю)" required>
+                                        <span class="input-group-text my-filling-fields">.00</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="mb-1 mt-3">
+                        <button id="writeInterestsBtn" type="submit" class="btn btn-info my-btn-clr">💵 Пополнить</button>
+                    </div>
                 </form>
 
               </div>
