сделано дохренища для приёма платежей, но ещё не все

--- a/webapp/templates/webapp/base.html
+++ b/webapp/templates/webapp/base.html
@@ -300,6 +300,7 @@
       var tgObject = window.Telegram.WebApp;
       tgObject.expand() // расширяем окно на весь экран
       tgObject.ready() // убираем индикатор загрузки вверху окна
+      tgObject.enableClosingConfirmation()  // предупреждение при закрытии WebApp
       const tlgIdElements = document.querySelectorAll('[name="tlg_id"]');
       tlgIdElements.forEach(function (elem) {
         // Выполнение действий с каждым элементом, устанавливаем TG ID от скрипта телеги
