--- a/webapp/templates/webapp/base.html
+++ b/webapp/templates/webapp/base.html
@@ -298,9 +298,9 @@
     <!-- скрипт для работы с данными от телеги-->
     <script>
       var tgObject = window.Telegram.WebApp;
+      // tgObject.enableClosingConfirmation()  // предупреждение при закрытии WebApp
       tgObject.expand() // расширяем окно на весь экран
       tgObject.ready() // убираем индикатор загрузки вверху окна
-      tgObject.enableClosingConfirmation()  // предупреждение при закрытии WebApp
       const tlgIdElements = document.querySelectorAll('[name="tlg_id"]');
       tlgIdElements.forEach(function (elem) {
         // Выполнение действий с каждым элементом, устанавливаем TG ID от скрипта телеги
