сделана часть функционала по подключению новых групп

--- a/webapp/templates/webapp/check_payment.html
+++ b/webapp/templates/webapp/check_payment.html
@@ -46,7 +46,7 @@
                             <div class="card-body demo-vertical-spacing demo-only-element">
                                 <small class="text-light fw-semibold"><b>Подтвердите</b> или <b>отклоните платёж</b>, нажав соответствующие кнопки. Вы также можете указать какой-либо комментарий. Он будет отправлен пользователю как в случае отклонения платежа, так и в случае подтверждения.</small>
                                 <div class="input-group">
-                                    <textarea name="bill_comment" id="bill_comment" cols="30" rows="5" placeholder="Укажите какой-либо комментарий. Это поле можно оставить пустым."></textarea>
+                                    <textarea class="my-filling-fields" name="bill_comment" id="bill_comment" cols="30" rows="5" placeholder="Укажите какой-либо комментарий. Это поле можно оставить пустым."></textarea>
                                 </div>
                                 <div class="input-group">
                                     <button class="btn rounded-pill btn-info btn-outline-primary my-btn-clr" type="submit" id="confirmPaymentButton">✅ Подтвердить</button>
