--- a/webapp/templates/webapp/sec_pay_step.html
+++ b/webapp/templates/webapp/sec_pay_step.html
@@ -43,7 +43,9 @@
                             <div class="card-body demo-vertical-spacing demo-only-element">
                                 <small class="text-light fw-semibold">Пожалуйста, прикрепите скриншот или чек для подтверждения платежа и нажмите кнопку "Отправить"</small>
                                 <div class="input-group">
-                                    <input type="file" name="bill_file" class="form-control" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04" aria-label="Upload">
+                                    <input type="file" name="bill_file" class="form-control my-filling-fields" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04" aria-label="Upload">
+                                </div>
+                                <div class="input-group">
                                     <button class="btn rounded-pill btn-info btn-outline-primary my-btn-clr" type="submit" id="inputFileButton">Отправить</button>
                                 </div>
                             </div>
