поправил стили на странице подтверждения пополнения баланса

--- a/webapp/templates/webapp/sec_pay_step.html
+++ b/webapp/templates/webapp/sec_pay_step.html
@@ -37,8 +37,8 @@
 
                 <input type="hidden" name="bill_hash" value="{{ bill_hash }}">
                 <div class="row">
-                    <div class="col-12">
-                        <div class="card">
+                    <div class="col-12 my-form-border">
+                        <div class="card my-form-area">
                             <h5 class="card-header">Прикрепите скриншот или чек</h5>
                             <div class="card-body demo-vertical-spacing demo-only-element">
                                 <small class="text-light fw-semibold">Пожалуйста, прикрепите скриншот или чек для подтверждения платежа и нажмите кнопку "Отправить"</small>
