поправил стили на странице подтверждения платежа, а также добавил настройку для загрузки файлов

--- a/webapp/templates/webapp/check_payment.html
+++ b/webapp/templates/webapp/check_payment.html
@@ -40,8 +40,8 @@
 
                 <input type="hidden" name="bill_hash" value="{{ bill_hash }}">
                 <div class="row">
-                    <div class="col-12">
-                        <div class="card">
+                    <div class="col-12 my-form-border">
+                        <div class="card my-form-area">
                             <h5 class="card-header">Подтверждение платежа</h5>
                             <div class="card-body demo-vertical-spacing demo-only-element">
                                 <small class="text-light fw-semibold"><b>Подтвердите</b> или <b>отклоните платёж</b>, нажав соответствующие кнопки. Вы также можете указать какой-либо комментарий. Он будет отправлен пользователю как в случае отклонения платежа, так и в случае подтверждения.</small>
