поправил стили на страницах с группами

--- a/webapp/templates/webapp/groups_detail.html
+++ b/webapp/templates/webapp/groups_detail.html
@@ -34,8 +34,8 @@
                 {% endif %}
 
                 <div class="row">
-                    <div class="col-12">
-                        <div class="card">
+                    <div class="col-12 my-form-border">
+                        <div class="card my-form-area">
 
                             <div class="px-4 py-3 mb-1">
                                 <a href="{% url 'webapp:groups' %}?tlg_id={{ tlg_id }}" class="btn btn-secondary my-btn-clr" type="submit" id="backButton"> << Назад к списку</a>
