--- a/webapp/templates/webapp/groups_list.html
+++ b/webapp/templates/webapp/groups_list.html
@@ -63,8 +63,8 @@
                 {% endif %}
 
                 <div class="row">
-                    <div class="col-12">
-                        <div class="card">
+                    <div class="col-12 my-form-border">
+                        <div class="card my-form-area">
                             <h5 class="card-header">Подключить новый групповой чат</h5>
                             <div class="card-body demo-vertical-spacing demo-only-element">
                                 <small class="text-light fw-semibold">Пожалуйста, заполните форму ниже для подключения нового группового чата и нажмите кнопку "Подключить".</small>
