блядь...забыл закоментить стили для проверки

--- a/webapp/templates/webapp/base.html
+++ b/webapp/templates/webapp/base.html
@@ -153,97 +153,97 @@
     </style>
 
 <!--    Стили формы для проверки при разработке-->
-    <style>
-        body{
-            color: blue;
-            background: green;
-        }
-        .my-background{
-            color: blue;
-            background: green;
-        }
-        .my-accordion-button:active {
-          background-color: blue;
-          color: white;
-        }
-        .accordion-button.collapsed {
-          background-color: brown;
-          color: white;
-        }
-        .accordion-button:not(.collapsed) {
-          background-color: purple;
-          color: white;
-        }
-        .my-form-border{
-            background-color: green;
-        }
-        .my-form-area{
-            background-color: pink;
-        }
-        .my-filling-fields{
-            background-color: red;
-            color: green;
-        }
-        .my-filling-fields:focus {
-          color: orange;
-          background-color: yellow;
-          border-color: rgba(249, 249, 255, 0.54);
-          outline: 0;
-          box-shadow: 0 0 0.25rem 0.05rem rgba(105, 108, 255, 0.1);
-        }
-        .my-filling-fields::-webkit-file-upload-button {
-          padding: 0.4375rem 0.875rem;
-          margin: -0.4375rem -0.875rem;
-          -webkit-margin-end: 0.875rem;
-              margin-inline-end: 0.875rem;
-          color: black;
-          background-color: violet;
-          pointer-events: none;
-          border-color: inherit;
-          border-style: solid;
-          border-width: 0;
-          border-inline-end-width: 1px;
-          border-radius: 0;
-          -webkit-transition: all 0.2s ease-in-out;
-          transition: all 0.2s ease-in-out;
-        }
+<!--    <style>-->
+<!--        body{-->
+<!--            color: blue;-->
+<!--            background: green;-->
+<!--        }-->
+<!--        .my-background{-->
+<!--            color: blue;-->
+<!--            background: green;-->
+<!--        }-->
+<!--        .my-accordion-button:active {-->
+<!--          background-color: blue;-->
+<!--          color: white;-->
+<!--        }-->
+<!--        .accordion-button.collapsed {-->
+<!--          background-color: brown;-->
+<!--          color: white;-->
+<!--        }-->
+<!--        .accordion-button:not(.collapsed) {-->
+<!--          background-color: purple;-->
+<!--          color: white;-->
+<!--        }-->
+<!--        .my-form-border{-->
+<!--            background-color: green;-->
+<!--        }-->
+<!--        .my-form-area{-->
+<!--            background-color: pink;-->
+<!--        }-->
+<!--        .my-filling-fields{-->
+<!--            background-color: red;-->
+<!--            color: green;-->
+<!--        }-->
+<!--        .my-filling-fields:focus {-->
+<!--          color: orange;-->
+<!--          background-color: yellow;-->
+<!--          border-color: rgba(249, 249, 255, 0.54);-->
+<!--          outline: 0;-->
+<!--          box-shadow: 0 0 0.25rem 0.05rem rgba(105, 108, 255, 0.1);-->
+<!--        }-->
+<!--        .my-filling-fields::-webkit-file-upload-button {-->
+<!--          padding: 0.4375rem 0.875rem;-->
+<!--          margin: -0.4375rem -0.875rem;-->
+<!--          -webkit-margin-end: 0.875rem;-->
+<!--              margin-inline-end: 0.875rem;-->
+<!--          color: black;-->
+<!--          background-color: violet;-->
+<!--          pointer-events: none;-->
+<!--          border-color: inherit;-->
+<!--          border-style: solid;-->
+<!--          border-width: 0;-->
+<!--          border-inline-end-width: 1px;-->
+<!--          border-radius: 0;-->
+<!--          -webkit-transition: all 0.2s ease-in-out;-->
+<!--          transition: all 0.2s ease-in-out;-->
+<!--        }-->
 
-        #spinner {
-          position: fixed;
-          top: 50%;
-          left: 50%;
-          display: none;
-        }
-        .overlay-square {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: var(--tg-theme-bg-color);
-            z-index: 9999;
-            display: flex;
-            border-radius: 0;
-            text-align: center;
-            display: none;
-            justify-content: center;
-            align-items: center;
-        }
-        .overlay-square.active {
-            display: flex;
-        }
-        .spinner-message {
-          position: fixed;
-          top: 50%;
-          left: 50%;
-          display: none;
-        }
-        .spinner-border {
-            width: 6rem;
-            height: 6rem;
-            font-size: 1.5rem;
-        }
-    </style>
+<!--        #spinner {-->
+<!--          position: fixed;-->
+<!--          top: 50%;-->
+<!--          left: 50%;-->
+<!--          display: none;-->
+<!--        }-->
+<!--        .overlay-square {-->
+<!--            position: fixed;-->
+<!--            top: 0;-->
+<!--            left: 0;-->
+<!--            width: 100%;-->
+<!--            height: 100%;-->
+<!--            background-color: var(&#45;&#45;tg-theme-bg-color);-->
+<!--            z-index: 9999;-->
+<!--            display: flex;-->
+<!--            border-radius: 0;-->
+<!--            text-align: center;-->
+<!--            display: none;-->
+<!--            justify-content: center;-->
+<!--            align-items: center;-->
+<!--        }-->
+<!--        .overlay-square.active {-->
+<!--            display: flex;-->
+<!--        }-->
+<!--        .spinner-message {-->
+<!--          position: fixed;-->
+<!--          top: 50%;-->
+<!--          left: 50%;-->
+<!--          display: none;-->
+<!--        }-->
+<!--        .spinner-border {-->
+<!--            width: 6rem;-->
+<!--            height: 6rem;-->
+<!--            font-size: 1.5rem;-->
+<!--        }-->
+<!--    </style>-->
 
     <!--Подключаем JQUERY-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
