изменил текст инструкции, где взять ID чата в форме добавлени нового чата, а также поправил стили для поля input readonly

--- a/webapp/templates/webapp/base.html
+++ b/webapp/templates/webapp/base.html
@@ -74,6 +74,11 @@
             border-color: var(--tg-theme-secondary-bg-color);
             color: var(--tg-theme-text-color);
         }
+        .my-filling-fields:read-only{
+            background-color: var(--tg-theme-secondary-bg-color);
+            border-color: var(--tg-theme-secondary-bg-color);
+            color: var(--tg-theme-text-color);
+        }
         .my-filling-fields:focus {
           color: var(--tg-theme-text-color);
           background-color: var(--tg-theme-secondary-bg-color);
@@ -181,6 +186,10 @@
 <!--            background-color: pink;-->
 <!--        }-->
 <!--        .my-filling-fields{-->
+<!--            background-color: red;-->
+<!--            color: green;-->
+<!--        }-->
+<!--        .my-filling-fields:read-only {-->
 <!--            background-color: red;-->
 <!--            color: green;-->
 <!--        }-->
