--- a/webapp/templates/webapp/groups_list.html
+++ b/webapp/templates/webapp/groups_list.html
@@ -80,7 +80,7 @@
                                         <input type="text" name="group_name" class="form-control my-filling-fields" placeholder="название группы" aria-label="название группы" required>
                                         <input type="text" name="group_tg_id" class="form-control my-filling-fields" placeholder="-1001234567890" aria-label="ссылка на группу" required>
                                     </div>
-                                    <div class="form-text">Укажите название группового чата и его ID. Для получения ID перешлите боту любое сообщение из чата.</div>
+                                    <div class="form-text">Укажите название группового чата и его ID.<br>🆔 <strong>Чтобы получить ID чата, назначьте бота админом чата и выполните в этом чате команду <code>/id</code></strong></div>
                                 </div>
 
                                 <hr>
