--- a/webapp/templates/webapp/groups_detail.html
+++ b/webapp/templates/webapp/groups_detail.html
@@ -14,11 +14,15 @@
                 {% csrf_token %}
 
                 {% if messages %}
-                    <ul class="messages">
-                        {% for message in messages %}
-                            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-                        {% endfor %}
-                    </ul>
+                    <div class="card-body">
+                        <div class="alert alert-danger" role="alert">
+                            <ul class="messages">
+                                {% for message in messages %}
+                                    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                    </div>
                 {% endif %}
 
 <!--                Инфо рамка об обновлении записи-->
@@ -98,6 +102,20 @@
                                     </label>
                                     <div class="input-group input-group-merge" id="main_content">
                                         <textarea name="msg_text" class="form-control my-filling-fields" aria-label="With textarea" placeholder="Укажите текст сообщения" required>{{ group_chat.msg_text }}</textarea>
+                                    </div>
+                                </div>
+                                <div class="mb-3">
+                                    <input type="file" name="group_chat_files" class="form-control my-filling-fields" aria-describedby="inputGroupFileAddon04" aria-label="Upload" multiple>
+                                    <div class="col-auto form-text">
+                                        <p>Укажите сообщение, которое увидят приглашенные в чат юзеры. Вы также можете выбрать несколько файлов для отправки.</p>
+                                    </div>
+                                    <div>
+                                        <small class="text-light fw-semibold"><mark>
+                                            ❗️Обратите внимание:
+                                            <br> 🔹 Без медиа кол-во символов: <code>1648</code>
+                                            <br> 🔹 С медиа кол-во символов: <code>648</code>
+                                            <br> 🔹 *Напоминаем что остаток по кол-ву символов занимают теги (@)
+                                        </mark></small>
                                     </div>
                                 </div>
                                 <div class="mb-3">
